--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "realestate-website",
+  "name": "y",
   "private": true,
-  "version": "0.0.0",
+  "version": "latest",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "scroll": "^3.0.1",
+    "swipe": "^1.7.7",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -24,6 +27,11 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
+    "json-loader": "^0.5.7",
     "vite": "^6.0.3"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/priyangshu24/RealEstate-WebSite.git",
+  "author": "priyangshu24 <138028617+priyangshu24@users.noreply.github.com>",
+  "license": "MIT"
 }
