--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "y",
   "private": true,
-  "version": "latest",
+  "version": "l",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "scroll": "^3.0.1",
