--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.5.3",
+    "react-dimmer": "^1.0.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "scroll": "^3.0.1",
